[package]
name = "graduation"
version = "0.1.0"
authors = ["zenzen <odysseusailoon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
plotlib = "0.5"
criterion = "0.3"
tokio = "0.2.21"
pest = "2.1.3"
pretty = "0.10.0"

